--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,7 @@
     "format": "prettier --write ./**/*.{ts,json}",
     "test": "jest --coverage=true -w=1 --forceExit --detectOpenHandles --watchAll=false --testPathPattern=src/__tests__ --testPathIgnorePatterns=build",
     "db:generate": "drizzle-kit generate:pg",
-    "db:push": "node -r esbuild-register src/drizzle/migrate.ts"
+    "db:push": "drizzle-kit push --config ./drizzle.config.ts"
   },
   "repository": {
     "type": "git",
@@ -25,14 +25,23 @@
   },
   "homepage": "https://github.com/subarnaad/memory-game-app#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
-    "pg": "^8.16.3"
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.5",
+    "pg": "^8.16.3",
+    "swagger": "^0.7.5",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
+    "@types/nodemailer": "^7.0.1",
     "@types/pg": "^8.15.5",
+    "@types/validator": "^13.15.2",
     "cross-env": "^10.0.0",
     "dotenv": "^17.2.1",
     "drizzle-kit": "^0.31.4",
