--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "Node16",
     "moduleResolution": "Node16",
     "resolveJsonModule": true,
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "outDir": "build",
     "rootDir": "./src",
     "sourceMap": true,
